Added motion to proto-ball.

--- a/game.html
+++ b/game.html
@@ -9,24 +9,29 @@
 
 		<script type="text/javascript">
 		var canvas;
-		var canvasContext;	
+		var canvasContext;
+		var ballX = 50;	
 	
 		window.onload = function() {
 			canvas = document.getElementById('gameCanvas');
 			canvasContext = canvas.getContext('2d');
-			drawEverything();
+
+			setInterval(drawEverything, 50);
 
 
 		}
 
 		function drawEverything() {
 
-			canvasContext.fillStyle = 'blue';
+			ballX = ballX +5;
+
+			console.log(ballX);
+			canvasContext.fillStyle = 'black';
 			canvasContext.fillRect(0,0,canvas.width,canvas.height);
-			canvasContext.fillStyle = 'red';
-			canvasContext.fillRect(100,200,50,25);
 			canvasContext.fillStyle = 'white';
-			canvasContext.fillRect(canvas.width/2,230,10,10);
+			canvasContext.fillRect(225,210,200,200);
+			canvasContext.fillStyle = 'red';
+			canvasContext.fillRect(ballX,100,10,10);
 		}
 
 
