--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
 		var canvas;
 		var canvasContext;
 		var ballX = 50;	
+		var ballSpeedX = 15;
 	
 		window.onload = function() {
 			canvas = document.getElementById('gameCanvas');
@@ -24,27 +25,31 @@
 		}
 
 		function moveEverything() {
-			ballX = ballX +5;
+			ballX = ballX + ballSpeedX;
+			if(ballX < 0) {
+				ballSpeedX = -ballSpeedX;
+			}
+			if(ballX > canvas.width) {
+				ballSpeedX = -ballSpeedX;
+			}
 		}
 
 		function drawEverything() {
 
-
-
-		
-			canvasContext.fillStyle = 'black';
-			canvasContext.fillRect(0,0,canvas.width,canvas.height);
-
-			//left paddle
-			canvasContext.fillStyle = 'white';
-			canvasContext.fillRect(0,210,10,100);
-
-
-			canvasContext.fillStyle = 'red';
-			canvasContext.fillRect(ballX,100,10,10);
+			//blanks out screen with black
+			colorRect(0,0,canvas.width,canvas.height, 'black');
+			//left player paddle
+			colorRect(0,210,10,100,'white');
+			//ball
+			colorRect(ballX,100,10,10,'red');
 		}
 
+		function colorRect(leftX,topY, width,height, drawColor) {
+			canvasContext.fillStyle = drawColor;
+			canvasContext.fillRect(leftX,topY, width,height, drawColor);
+		}
 
+		console.log('lorem jan 13');
 
 	</script>
 
