--- a/game.html
+++ b/game.html
@@ -41,7 +41,15 @@
 			//left player paddle
 			colorRect(0,210,10,100,'white');
 			//ball
-			colorRect(ballX,100,10,10,'red');
+			colorCircle(ballX, 150, 10, 'white');
+			
+		}
+
+		function colorCircle(centerX, centerY, radius, drawColor) {
+			canvasContext.fillStyle = drawColor;
+			canvasContext.beginPath();
+			canvasContext.arc(centerX, centerY, radius, 0, Math.PI*2, true);
+			canvasContext.fill();
 		}
 
 		function colorRect(leftX,topY, width,height, drawColor) {
